--- a/src/routes/Wordle/Wordle.css
+++ b/src/routes/Wordle/Wordle.css
@@ -1,26 +1,13 @@
-.wordle-container {
-    text-align: center;
-    margin-top: 50px;
-  }
-  
-  .wordle-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 50px);
-    gap: 5px;
-    margin-bottom: 20px;
-  }
-  
-  .letter {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    text-align: center;
-    line-height: 50px;
-    font-size: 24px;
-  }
-  
-  .letter:nth-child(odd) {
-    background-color: #ddd;
-  }
+body {
+  text-align: center;
+  font-size: 1em;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+h1 {
+  font-size: 1.2em;
+  padding: 20px 0;
+  border-bottom: 1px solid #ccc;
+  margin: 0 0 30px 0;
+  color: #333;
+}
