--- a/src/routes/Wordle/Wordle.css
+++ b/src/routes/Wordle/Wordle.css
@@ -1,13 +1,56 @@
-body {
+.App {
   text-align: center;
-  font-size: 1em;
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
+  margin-top: 50px;
 }
-h1 {
-  font-size: 1.2em;
-  padding: 20px 0;
-  border-bottom: 1px solid #ccc;
-  margin: 0 0 30px 0;
-  color: #333;
+
+.timer {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.word-matrix {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.box {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+.box.selected {
+  background-color: lightblue;
+}
+
+.tries-left {
+  margin-top: 20px;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+.keyboard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.keyboard button {
+  margin: 5px;
+  padding: 10px;
+  font-size: 16px;
 }
